--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1> Nay's Poetry Corner</h1>
 
+<footer> This AI project was coded by <a href="https://github.com/Nay-nay93" target="_blank">Naomi Greco</a>, is open-sourced on <a href="https://github.com/Nay-nay93/Poetry" target="_blank">GitHub</a> and is hosted on <a href="https://thepoetrycorner.netlify.app/" target="_blank">Netlify</a></footer>
 <script src="src/index.js"></script>
 </body>
 </html>
