embedded font in html,

--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>The Poetry Corner</title>
 </head>
+<div class="container">
 <body>
     <h1> Nay's AI Poetry Corner</h1>
 
 <form>
-    <input type="text" placeholder=" Enter Poetry Topic" />
+    <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off"/>
     <input type="submit" />
 </form>
-
+<div>
+    Poem will go here
+</div>
 <footer> 
     This AI project was coded by <a href="https://github.com/Nay-nay93" target="_blank">Naomi Greco</a>, is open-sourced on <a href="https://github.com/Nay-nay93/Poetry" target="_blank">GitHub</a> and is hosted on <a href="https://thepoetrycorner.netlify.app/" target="_blank">Netlify</a>
 </footer>
+</div>
 <script src="src/index.js"></script>
 </body>
 </html>
