--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 <div class="container">
 <body>
+<header>
     <h1> Nay's AI Poetry Corner</h1>
-
+</header>
+<main>
 <form>
-    <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off"/>
-    <input type="submit" />
+    <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off" class="instructions"/>
+    <input type="submit" class="button" />
 </form>
-<div>
+<div class="poem">
     Poem will go here
 </div>
+</main>
 <footer> 
     This AI project was coded by <a href="https://github.com/Nay-nay93" target="_blank">Naomi Greco</a>, is open-sourced on <a href="https://github.com/Nay-nay93/Poetry" target="_blank">GitHub</a> and is hosted on <a href="https://thepoetrycorner.netlify.app/" target="_blank">Netlify</a>
 </footer>
