--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +17,11 @@
     <h1> Nay's AI Poetry Corner</h1>
 </header>
 <main>
-<form>
+<form id="form">
     <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off" class="instructions"/>
     <input type="submit" class="button" />
 </form>
-<div class="poem">
-    Poem will go here
+<div class="poem" id="poem">
 </div>
 </main>
 <footer> 
