--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,7 @@
 </header>
 <main>
 <form id="form">
-    <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off" class="instructions"/>
+    <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off" class="instructions" id="instructions"/>
     <input type="submit" class="button" />
 </form>
 <div class="poem" id="poem">
