--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <h1> Nay's AI Poetry Corner</h1>
 </header>
 <main>
+    <div class="form-container">
 <form id="form">
     <input type="text" placeholder=" Enter Poetry Topic" autofocus required autocomplete="off" class="instructions" id="instructions"/>
     <input type="submit" class="button" />
 </form>
-<div class="poem" id="poem">
+    <div class="hint">i.e: The Ocean, Friendship or Memories </div>
+</div>
+<div class="poem hidden" id="poem">
 </div>
 </main>
 <footer> 
